--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,5 @@
     name: JoinPopup-NoMessage
     main: himbeer\popup\main
     version: 1.0.0
-    api: [1.14.0, 2.0.0]
+    api: [1.14.0, 2.0.0, 3.0.0, 3.0.0-ALPHA1]
+    author: HimbeersaftLP
