Rewrite this shit

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
-    name: JoinPopup-NoMessage
-    main: himbeer\popup\main
-    version: 1.0.1
-    api: [1.14.0, 2.0.0, 3.0.0, 3.0.0-ALPHA1]
-    author: HimbeersaftLP
+name: JoinPopup-NoMessage
+main: himbeer\popup\main
+version: 2.0.0
+api: [3.0.0]
+author: HimbeersaftLP
